try multi platform build

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-NVIM_USER_UID=1000
-NVIM_USER_GID=1002
-NVIM_USER=username
-NVIM_MNT_DIR=/home/username
-NVIM_COC_EXT_DIR=/home/username/.local/share/coc/extensions
+NEOVIM_USER_UID=1000
+NEOVIM_USER_GID=1002
+NEOVIM_MNT_DIR=/home/username
