--- a/src/platforms/node/Dockerfile
+++ b/src/platforms/node/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:bookworm-slim
 
 ENV NVIM_USER=node
-ENV MNT_DIR=/mnt
+ENV MNT_DIR=/mnt/project
 
-RUN apt-get update -y && apt-get install curl sudo neovim git -y
+RUN mkdir -p $MNT_DIR
+RUN apt-get update -y && apt-get install curl sudo git -y
+RUN curl -LO https://github.com/neovim/neovim/releases/latest/download/nvim.appimage \
+       && chmod u+x nvim.appimage \
+       && ./nvim.appimage --appimage-extract \
+       && ln -s /squashfs-root/AppRun /usr/bin/nvim
 
 ENV HOME=/home/$NVIM_USER
 ENV XDG_CONFIG_HOME=$HOME/.local/share
@@ -22,7 +27,6 @@ RUN sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/p
 COPY init.vim $XDG_CONFIG_HOME/nvim/init.vim
 
 WORKDIR $MNT_DIR
-ENV PATH=$PATH:$BIN_PATH
 
 ENTRYPOINT ["sh", "/opt/entrypoint.sh"]
 CMD ["sh", "/opt/init.sh"]
