--- a/src/common/Dockerfile.body.snippet
+++ b/src/common/Dockerfile.body.snippet
@@ -3,6 +3,7 @@ FROM node:bookworm-slim
 COPY init.sh $HOME/init.sh
 COPY entrypoint.sh $HOME/entrypoint.sh
 COPY init.vim $XDG_CONFIG_HOME/nvim/init.vim
+RUN sudo chown $NVIM_USER:$NVIM_USER $HOME/*
 
 RUN nvim -c "PlugInstall --sync | qa"
 
