--- a/src/common/Dockerfile.body.snippet
+++ b/src/common/Dockerfile.body.snippet
@@ -1,10 +1,12 @@
 FROM node:bookworm-slim
 
+COPY init.vim $XDG_CONFIG_HOME/nvim/init.vim
+RUN nvim -c "PlugInstall --sync | qa"
+
 COPY init.sh $HOME/init.sh
 COPY entrypoint.sh $HOME/entrypoint.sh
-COPY init.vim $XDG_CONFIG_HOME/nvim/init.vim
 
-RUN nvim -c "PlugInstall --sync | qa"
+ENV PATH=$PATH:$NPM_CONFIG_PREFIX/bin
 
 WORKDIR $MNT_DIR
 
