--- a/src/common/Dockerfile.head.snippet
+++ b/src/common/Dockerfile.head.snippet
@@ -21,3 +21,4 @@ USER $NVIM_USER
 RUN sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
        https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
+ENV NPM_CONFIG_PREFIX=$HOME/.npm-global
