--- a/src/platforms/node/Dockerfile
+++ b/src/platforms/node/Dockerfile
@@ -1,1 +1,4 @@
 FROM node:bookworm-slim
+
+WORKDIR $EXTENSIONS
+RUN npm install coc-tsserver --ignore-scripts --no-lockfile --no-global --legacy-peer-deps --omit=dev
