--- a/src/platforms/python/Dockerfile
+++ b/src/platforms/python/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:bookworm-slim
 
-RUN sudo apt-get install python3 python3-pip -y
-RUN sudo ln -s $(which python3) /usr/bin/python
+USER root
+RUN apt-get install python3 python3-pip -y
+RUN ln -s $(which python3) /usr/bin/python
+USER $NVIM_USER
 
 WORKDIR $EXTENSIONS
 RUN npm install coc-pyright --ignore-scripts --no-lockfile --omit=dev
