--- a/src/common/Dockerfile.head.snippet
+++ b/src/common/Dockerfile.head.snippet
@@ -1,4 +1,8 @@
-FROM node:bookworm-slim
+FROM --platform=$BUILDPLATFORM node:bookworm-slim AS build
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
+
+RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM" > /log
 
 ENV NVIM_USER=node
 
